# afw

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .swcrc  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  afw-package.json  afwdev  cspell.json  doxygen_errors.txt  package-lock.json  package.json  python-requirements.txt  repeat-command.sh  tsconfig.json  wafwdev.bat
src/afw/: CMakeLists.txt
src/afw/action/: afw_action.c  afw_action.h
src/afw/adapter/: afw_adapter.c  afw_adapter.h  afw_adapter_add.c  afw_adapter_add.h  afw_adapter_context.c  afw_adapter_delete.c  afw_adapter_delete.h  afw_adapter_get.c  afw_adapter_get.h  afw_adapter_impl.c  afw_adapter_impl.h  afw_adapter_impl_index.c  afw_adapter_impl_index.h  afw_adapter_internal.h  afw_adapter_journal.c  afw_adapter_journal.h  afw_adapter_modify.c  afw_adapter_modify.h  afw_adapter_replace.c  afw_adapter_replace.h  afw_adapter_retrieve.c  afw_adapter_retrieve.h
src/afw/adaptor/: afw_adaptor.c  afw_adaptor.h  afw_adaptor_add.c  afw_adaptor_add.h  afw_adaptor_context.c  afw_adaptor_delete.c  afw_adaptor_delete.h  afw_adaptor_get.c  afw_adaptor_get.h  afw_adaptor_impl.c  afw_adaptor_impl.h  afw_adaptor_impl_index.c  afw_adaptor_impl_index.h  afw_adaptor_internal.h  afw_adaptor_journal.c  afw_adaptor_journal.h  afw_adaptor_modify.c  afw_adaptor_modify.h  afw_adaptor_replace.c  afw_adaptor_replace.h  afw_adaptor_retrieve.c  afw_adaptor_retrieve.h
src/afw/application/: afw_application.c  afw_application_internal.h
src/afw/array/: afw_array.c  afw_array.h  afw_array_const_array.c  afw_array_impl.c  afw_array_impl.h  afw_array_internal.h  afw_array_memory.c  afw_array_wrapper_for_array.c
src/afw/array_template/: afw_array_template.h
src/afw/ascii/: afw_ascii.c  afw_ascii.h
src/afw/associative_array/: afw_associative_array.c  afw_associative_array.h  afw_associative_array_template.h
src/afw/atomic/: afw_atomic.h
src/afw/authorization/: afw_authorization.c  afw_authorization.h  afw_authorization_handler_type_script.c  afw_authorization_impl.c  afw_authorization_impl.h  afw_authorization_internal.h
src/afw/cmake/: afw-config.cmake.in  afw.pc.in  afw_apr-config.cmake  afw_aprutil-config.cmake  afw_macros.cmake
src/afw/compile/: afw_compile.c  afw_compile.h  afw_compile_code_point.c  afw_compile_code_point.h  afw_compile_internal.h  afw_compile_lexical.c  afw_compile_parse.c  afw_compile_parse_assignment_target.c  afw_compile_parse_expression.c  afw_compile_parse_expression_tuple.c  afw_compile_parse_script.c  afw_compile_parse_template.c  afw_compile_parse_value.c
src/afw/components/: afw_components.h
src/afw/content_type/: afw_content_type.c  afw_content_type.h  afw_content_type_application_afw.c  afw_content_type_impl.c  afw_content_type_impl.h
src/afw/context/: afw_context.c  afw_context.h
src/afw/data_type/: afw_data_type.c  afw_data_type.h
src/afw/debug/: afw_debug.c  afw_debug.h
src/afw/doc/: README.txt  building_on_linux.md  building_on_mac.md  building_on_windows.md  doxygen.md  index.xml
src/afw/endian/: afw_endian.h
src/afw/environment/: afw_environment.c  afw_environment.h  afw_environment_configuration.c  afw_environment_internal.h  afw_environment_register_core.c  afw_environment_registry_object.c  afw_environment_variables_object.c
src/afw/error/: afw_error.c  afw_error.h
src/afw/file/: afw_file.c  afw_file.h  afw_file_internal.h  afw_file_journal.c
src/afw/flag/: afw_flag.c  afw_flag.h
src/afw/function/: afw_function.c  afw_function.h  afw_function_adapter.c  afw_function_adaptor.c  afw_function_administrative.c  afw_function_anyURI.c  afw_function_array.c  afw_function_authorization.c  afw_function_base64Binary.c  afw_function_compiler.c  afw_function_compiler_expression.c  afw_function_compiler_script.c  afw_function_compiler_test_script.c  afw_function_date.c  afw_function_dateTime.c  afw_function_double.c  afw_function_expression.c  afw_function_hexBinary.c  afw_function_higher_order_array.c  afw_function_higher_order_list.c  afw_function_hybrid.c  afw_function_indexes.c  afw_function_integer.c  afw_function_journal.c  afw_function_json.c  afw_function_list.c  afw_function_logical.c  afw_function_miscellaneous.c  afw_function_model.c  afw_function_object.c  afw_function_polymorphic.c  afw_function_random.c  afw_function_regexp.c  afw_function_relaxed_json.c  afw_function_rfc822Name.c  afw_function_script.c  afw_function_stream.c  afw_function_string.c  afw_function_template.c  afw_function_time.c  (+4 more)
src/afw/generate/: README.txt
src/afw/include/: afw.h  afw_common.h  afw_common_opaques.h  afw_components.h  afw_doxygen.h  afw_interface_common.h  afw_internal.h  afw_minimal.h  afw_os.h
src/afw/json/: afw_json.c  afw_json.h  afw_json_from_value.c  afw_json_internal.h
src/afw/list/: afw_list.c  afw_list.h  afw_list_const_array.c  afw_list_impl.c  afw_list_impl.h  afw_list_internal.h  afw_list_memory.c  afw_list_wrapper_for_array.c
src/afw/lock/: afw_lock.c  afw_lock.h
src/afw/log/: afw_log.c  afw_log.h  afw_log_deprecated.c  afw_log_deprecated.h  afw_log_deprecated_interface.h  (+4 more)
src/afw_curl/: CMakeLists.txt  afw_curl.h  afw_curl_extension.c  afw_curl_function_curl.c  afw_curl_function_http.c  afw_curl_function_smtp.c  afw_curl_internal.c  afw_curl_internal.h
src/afw_dev/: .gitignore  CMakeLists.txt  afwdev.py  make_afwdev.py
src/afw_lmdb/: CMakeLists.txt  README.md  afw_lmdb.h  afw_lmdb_adapter.c  afw_lmdb_adapter_factory.c  afw_lmdb_adapter_session.c  afw_lmdb_adaptor.c  afw_lmdb_adaptor_factory.c  afw_lmdb_adaptor_session.c  afw_lmdb_extension.c  afw_lmdb_function_lmdb.c  afw_lmdb_index.c  afw_lmdb_index.h  afw_lmdb_internal.c  afw_lmdb_internal.h  afw_lmdb_journal.c  afw_lmdb_metadata.c  afw_lmdb_metadata.h
src/afw_server_fcgi/: CMakeLists.txt  afw_server_fcgi.c  afw_server_fcgi.md  afw_server_fcgi_internal.h  afw_server_fcgi_main.c  afw_server_fcgi_properties_object.c  afw_server_fcgi_request.c
src/afw_yaml/: CMakeLists.txt  afw_yaml.c  afw_yaml.h  afw_yaml_from_value.c  afw_yaml_to_value.c
(+6130 files in other folders)
